<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bMg-ha-iRh">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Menu-->
        <scene sceneID="RvV-Dq-7Mv">
            <objects>
                <tableViewController id="bMg-ha-iRh" customClass="MainMenuTableViewController" customModule="DynamicTypeShowcase" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="H29-R1-b8F">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <sections>
                            <tableViewSection id="AM6-xP-3e4">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="8KN-hB-Cm1" style="IBUITableViewCellStyleDefault" id="779-XU-3oP">
                                        <rect key="frame" x="0.0" y="35" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="779-XU-3oP" id="eOC-R8-dvR">
                                            <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Text Styles" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="8KN-hB-Cm1">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <connections>
                                            <segue destination="MIz-f5-Aue" kind="show" id="NOK-oV-SHf"/>
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="vR2-zQ-W22" style="IBUITableViewCellStyleDefault" id="SOA-tV-Z2Y">
                                        <rect key="frame" x="0.0" y="79" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SOA-tV-Z2Y" id="qjw-aP-cj2">
                                            <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Image" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="vR2-zQ-W22">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <connections>
                                            <segue destination="Hn9-dU-3yy" kind="show" id="1ik-F7-Xev"/>
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="pWA-QW-Xdu" style="IBUITableViewCellStyleDefault" id="Qgh-aK-agE">
                                        <rect key="frame" x="0.0" y="123" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Qgh-aK-agE" id="9dx-hI-WNo">
                                            <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Custom Font" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" id="pWA-QW-Xdu">
                                                    <rect key="frame" x="16" y="0.0" width="324" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <connections>
                                            <segue destination="tZT-kD-LgC" kind="show" id="REu-hW-wAv"/>
                                        </connections>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="bMg-ha-iRh" id="2G5-Tk-VFV"/>
                            <outlet property="delegate" destination="bMg-ha-iRh" id="SFT-rm-827"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Menu" id="8DA-y2-sHd"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="nnp-k4-JVC" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="170" y="115"/>
        </scene>
        <!--TextStylesViewController-->
        <scene sceneID="ZhA-gs-Gms">
            <objects>
                <viewControllerPlaceholder storyboardName="TextStylesViewController" id="MIz-f5-Aue" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="0rm-RJ-egu" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="726" y="22"/>
        </scene>
        <!--ImageViewController-->
        <scene sceneID="RZs-hx-ulI">
            <objects>
                <viewControllerPlaceholder storyboardName="ImageViewController" id="Hn9-dU-3yy" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Y9G-YS-wfm" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="706" y="69"/>
        </scene>
        <!--CustomFontViewController-->
        <scene sceneID="BrT-nA-S4k">
            <objects>
                <viewControllerPlaceholder storyboardName="CustomFontViewController" id="tZT-kD-LgC" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VYT-JZ-3Z9" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="705" y="114"/>
        </scene>
    </scenes>
</document>
