<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VmD-uK-t70">
    <device id="retina5_9" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Custom Font View Controller-->
        <scene sceneID="g9u-Rb-OZC">
            <objects>
                <viewController id="VmD-uK-t70" customClass="CustomFontViewController" customModule="DynamicTypeShowcase" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="hP1-VD-Z5K">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4os-li-GOK">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                <subviews>
                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ukb-UR-LUR">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="698"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <connections>
                                            <outlet property="dataSource" destination="VmD-uK-t70" id="OjZ-FN-qi0"/>
                                            <outlet property="delegate" destination="VmD-uK-t70" id="aBW-1B-8Hx"/>
                                        </connections>
                                    </tableView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bVd-pl-ZQl">
                                        <rect key="frame" x="0.0" y="698" width="375" height="114"/>
                                        <subviews>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yL9-TY-AfF">
                                                <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
                                                <color key="backgroundColor" red="0.69803921568627447" green="0.69803921568627447" blue="0.69803921568627447" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="0.5" id="XND-eJ-ezu"/>
                                                </constraints>
                                            </view>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OhN-gK-6Bp">
                                                <rect key="frame" x="0.0" y="0.0" width="375" height="114"/>
                                                <subviews>
                                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ktU-dh-TtD">
                                                        <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                                        <subviews>
                                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="81o-Bh-pDn">
                                                                <rect key="frame" x="8" y="8" width="31" height="30"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="30" id="bL5-hr-rkG"/>
                                                                </constraints>
                                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                <state key="normal" title="Font"/>
                                                                <connections>
                                                                    <action selector="onTapCurrentFontButton:" destination="VmD-uK-t70" eventType="touchUpInside" id="rSA-tq-kE7"/>
                                                                </connections>
                                                            </button>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input your text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GAo-JT-Y1G">
                                                                <rect key="frame" x="47" y="8" width="287" height="30"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="textField"/>
                                                                <nil key="textColor"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                            </textField>
                                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="255" verticalHuggingPriority="255" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b5p-AR-woM">
                                                                <rect key="frame" x="342" y="8" width="25" height="30"/>
                                                                <state key="normal" image="SizeChangeButton"/>
                                                                <connections>
                                                                    <action selector="onTapSizeSettingButton:" destination="VmD-uK-t70" eventType="touchUpInside" id="CRf-BK-XZd"/>
                                                                </connections>
                                                            </button>
                                                        </subviews>
                                                        <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                                    </stackView>
                                                </subviews>
                                                <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstItem="ktU-dh-TtD" firstAttribute="top" secondItem="OhN-gK-6Bp" secondAttribute="top" id="2Gw-Xt-TxW"/>
                                                    <constraint firstItem="ktU-dh-TtD" firstAttribute="bottom" secondItem="dRn-vc-hkh" secondAttribute="bottom" id="77n-bM-7Xz"/>
                                                    <constraint firstItem="ktU-dh-TtD" firstAttribute="leading" secondItem="OhN-gK-6Bp" secondAttribute="leading" id="A2K-uj-hjV"/>
                                                    <constraint firstAttribute="trailing" secondItem="ktU-dh-TtD" secondAttribute="trailing" id="ylF-be-Tar"/>
                                                </constraints>
                                                <viewLayoutGuide key="safeArea" id="dRn-vc-hkh"/>
                                            </view>
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="4os-li-GOK" secondAttribute="trailing" id="BIl-x2-gfK"/>
                            <constraint firstAttribute="bottom" secondItem="4os-li-GOK" secondAttribute="bottom" id="VaC-R8-Mxy"/>
                            <constraint firstItem="4os-li-GOK" firstAttribute="top" secondItem="hP1-VD-Z5K" secondAttribute="top" id="Wpy-jl-Ag9"/>
                            <constraint firstItem="4os-li-GOK" firstAttribute="leading" secondItem="hP1-VD-Z5K" secondAttribute="leading" id="iUQ-WS-2uU"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="efK-VJ-bJY"/>
                    </view>
                    <connections>
                        <outlet property="bottomConstraint" destination="VaC-R8-Mxy" id="2C9-3N-Lna"/>
                        <outlet property="currentFontButton" destination="81o-Bh-pDn" id="TQN-J5-JNf"/>
                        <outlet property="tableView" destination="ukb-UR-LUR" id="Vjj-Hq-vjm"/>
                        <outlet property="textField" destination="GAo-JT-Y1G" id="IDi-Ac-lnv"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fmy-iq-Vbk" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="5.5999999999999996" y="99.01477832512316"/>
        </scene>
    </scenes>
    <resources>
        <image name="SizeChangeButton" width="25" height="25"/>
    </resources>
</document>
